--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ body{
 
 /*About Section*/
 #about{
-	background:url('../img/about/back.jpg');
+	background:url('../img/football2.jpg');
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
