location and contact us update

--- a/css/main.css
+++ b/css/main.css
@@ -117,10 +117,10 @@ body{
 	/* border: 1px solid #7f8c8d; */
 	padding: 2px;
 }
-#footer .fab:hover{
-	color: #ff0000;
+/* #footer .fab:hover{ */
+	/* color: #ff0000; */
 	/* border-color: #000; */
-}
+/* } */
 
 /*About Page*/
 
