--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body{
 	height: 500px;
 }
 .crs-img-1{
-	background: url('../img/kids1.jpg');
+	background: url('../img/logos/logo_wide.png');
 	background-size: cover;
 	background-position: center;
 	width:100%;
@@ -31,13 +31,13 @@ body{
 	width:100%;
 }
 .crs-img-3{
-	background: url('../img/slider-img3.jpg');
+	background: url('../img/kids1.jpg');
 	background-size: cover;
 	background-position: center;
 	width:100%;
 }
 .crs-img-4{
-	background: url('../img/slider-img4.jpg');
+	background: url('../img/slider-img3.jpg');
 	background-size: cover;
 	background-position: center;
 	width:100%;
