fixed bgs and cards

--- a/css/main.css
+++ b/css/main.css
@@ -62,15 +62,19 @@ body{
 #get-started{
 	background:url('../img/bg1.jpg');
 	background-attachment: fixed;
+	background-size: 100%;
 	background-size: cover;
-	position: relative;
 	background-repeat: no-repeat;
-	min-height: 250px;
+	min-height: 300px;
+	position: relative;
+	background-position: center;
+	/* bottom: 0px; */
+	/* right: 50px; */
 }
 #get-started .inner-overlay{
 	background:rgba(0,0,0,0.7);
 	position: absolute;
-	top: 0;
+	bottom: 0;
 	left: 0;
 	height: 100%;
 	width: 100%
@@ -136,7 +140,8 @@ body{
 #about{
 	background:url('../img/bg1.jpg');
 	background-attachment: fixed;
-	background-size: cover;
+	background-size: 100%;
+	/* background-size: cover; */
 	background-repeat: no-repeat;
 	min-height: 300px;
 	position: relative;
