--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,8 @@ body{
 }
 .crs-img-1{
 	/* background: url('../img/logo_wide.png'); */
-	background: url('../img/logo_black.svg'); 
+/* 	background: url('../img/logo_black.svg');  */
+	background: url('../img/Website_July_2023_Flyer_cropped.png');
 	background-size: 50%;
 	background-position: center;
 	width:100%;
