--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,8 @@ body{
 .crs-img-1{
 	/* background: url('../img/logo_wide.png'); */
 /* 	background: url('../img/logo_black.svg');*/
-	background: url('../img/July_hols_facebook_1-min.png');
-	background-size: 100%;
+	background: url('../img/t32023_wv.png');
+	background-size: 80%;
 	opacity: 0.8;
 /*	background-size: cover;*/
 	background-position: center;
