--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,13 @@ body{
 	height: 500px;
 }
 .crs-img-1{
-	/* background: url('../img/logo_wide.png'); */
-/* 	background: url('../img/logo_black.svg');*/
 	background: url('../img/t32023_wv.png');
-	background-size: 50%;
-	opacity: 0.8;
+	background-size: cover;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-color: rgba(1,100,32,0.7);
+	/* opacity: 0.1; */
+	width:100%;
 /*	background-size: cover;*/
 	background-position: center;
 	width:100%;
