Made image a jpg to reduce filesize

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body{
 	height: 500px;
 }
 .crs-img-1{
-	background: url('../img/t32023_wv.png');
+	background: url('../img/t32023_wv.jpg');
 	background-size: cover;
 	background-size: contain;
 	background-repeat: no-repeat;
