--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,10 @@ body{
 /*Slider*/
 .carousel-item{
 	height: 500px;
-	max-width: 800px; /* Adjust this value as needed */
-    	margin: 0 auto;   /* Center the container */
+}
+.container {
+    max-width: 800px; /* Adjust this value as needed */
+    margin: 0 auto;   /* Center the container */
 }
 .crs-img-1{
 	background: url('../img/term_enrollment_website_carousel.png');
